line break issue?

--- a/app_preview.cloudbuild.yaml
+++ b/app_preview.cloudbuild.yaml
@@ -18,7 +18,7 @@ steps:
     '--region', 'us-east1',
     '--platform', 'managed',
     '--allow-unauthenticated',
-    '--tag=commit$SHORT_SHA',
+    '--tag=$SHORT_SHA',
     '--no-traffic',
     '--quiet'
   ]
@@ -34,5 +34,4 @@ steps:
     - '-c'
     - |
       gh auth login --with-token < /workspace/token.txt
-      pr comment $_PR_NUMBER --body \
-        'Preview this change at https://$SHORT_SHA---us-covid-stats-syyjbfrpfq-ue.a.run.app'
+      pr comment $_PR_NUMBER --body "Preview this change at https://$SHORT_SHA---us-covid-stats-syyjbfrpfq-ue.a.run.app"
