--- a/app_preview.cloudbuild.yaml
+++ b/app_preview.cloudbuild.yaml
@@ -22,15 +22,18 @@ steps:
     '--no-traffic',
     '--quiet'
   ]
-# fetch gh token
-- name: gcr.io/cloud-builders/gcloud
-  entrypoint: 'bash'
-  args: [ '-c', "gcloud secrets versions access latest --secret=github_token --format='get(payload.data)' | tr '_-' '/+' | base64 -d > /workspace/token.txt" ]
+
 # post preview link to PR
 - name: 'gcr.io/$PROJECT_ID/github'
   entrypoint: 'bash'
   args: 
     - '-c'
     - |
-      gh auth login --with-token < /workspace/token.txt
+      gh auth login --with-token <<< "$$GH_TOKEN"
       gh pr comment $_PR_NUMBER --body="Preview this change at https://commit-$SHORT_SHA---us-covid-stats-syyjbfrpfq-ue.a.run.app"
+  secretEnv: ['GH_TOKEN']
+  
+availableSecrets:
+  secretManager:
+    - versionName: projects/62368363434/secrets/github_token/versions/latest
+      env: 'GH_TOKEN'
